# FediQuest

./: .gitignore  ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  OPTIMIZATION_SUMMARY.md  README.md  build.gradle.kts  gradle.properties  gradlew  settings.gradle.kts  setup.sh
.github/: PR_TEMPLATE.md
.github/workflows/: android-ci.yml
app/: CMakeLists.txt  README_NATIVE.md  build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: quest_classifier.tflite
app/src/main/assets/markers/: README.md
app/src/main/assets/models/: README.md
app/src/main/java/com/fediquest/app/: FediQuestApp.kt  MainActivity.kt
app/src/main/java/com/fediquest/app/data/: FediverseService.kt
app/src/main/java/com/fediquest/app/data/local/: AppDatabase.kt
app/src/main/java/com/fediquest/app/data/models/: Quest.kt
app/src/main/java/com/fediquest/app/data/repositories/: QuestRepository.kt
app/src/main/java/com/fediquest/app/di/: ServiceLocator.kt
app/src/main/java/com/fediquest/app/domain/usecases/: CalculateXPUseCase.kt
app/src/main/java/com/fediquest/app/ui/avatar/: AvatarFragment.kt  AvatarViewModel.kt  CompanionFragment.kt  CompanionViewModel.kt
app/src/main/java/com/fediquest/app/ui/map/: MapFragment.kt  MapViewModel.kt
app/src/main/java/com/fediquest/app/ui/quest/: QuestDetailFragment.kt  QuestDetailViewModel.kt
app/src/main/java/com/fediquest/app/ui/scan/: CameraViewModel.kt
app/src/main/java/com/fediquest/app/util/: XPConstants.kt  XPManager.kt
app/src/main/java/com/fediquest/app/viewmodel/: SharedViewModel.kt
app/src/main/java/org/fediquest/: Config.kt  FediQuestApp.kt  MainActivity.kt  PlayerProfile.kt  QuestVerifier.kt  SpawnFetcher.kt
app/src/main/java/org/fediquest/camera/: CameraCaptureManager.kt
app/src/main/java/org/fediquest/companion/evolution/: CompanionEvolutionManager.kt
app/src/main/java/org/fediquest/companion/state/: CompanionState.kt
app/src/main/java/org/fediquest/data/dao/: PlayerDao.kt  PlayerXpDao.kt  QuestDao.kt
app/src/main/java/org/fediquest/data/database/: AppDatabase.kt
app/src/main/java/org/fediquest/data/entity/: PlayerStateEntity.kt  PlayerXpEntity.kt  QuestEntity.kt
app/src/main/java/org/fediquest/data/remote/: ActivityPubClient.kt
app/src/main/java/org/fediquest/data/repository/: PlayerRepository.kt  QuestRepository.kt
app/src/main/java/org/fediquest/fediverse/activitypub/: ActivityPubTypes.kt
app/src/main/java/org/fediquest/fediverse/client/: ActivityPubClient.kt
app/src/main/java/org/fediquest/ml/tflite/: ImageVerifier.kt
app/src/main/java/org/fediquest/offline/: OfflineFirstManager.kt
app/src/main/res/drawable/: bg_map_placeholder.xml  bottom_nav_color.xml  ic_back.xml  ic_coin.xml  ic_difficulty.xml  ic_fediverse.xml  ic_launcher_foreground.xml  ic_location.xml  ic_map.xml  ic_scan.xml  ic_xp.xml  progress_xp.xml  scan_overlay.xml
app/src/main/res/layout/: activity_main.xml  fragment_avatar.xml  fragment_camera_scan.xml  fragment_companion.xml  fragment_map.xml  fragment_quest_detail.xml
app/src/main/res/menu/: bottom_nav_menu.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  themes.xml
app/src/main/res/xml/: file_paths.xml
docs/: MIGRATION_GUIDE.md  ROADMAP.md
godot/: README_GODOT.md  project.godot
godot/scripts/: geo_utils.gd  spawn_loader.gd
gradle/: libs.versions.toml
scripts/: clean_caches.sh
server/: README.md  server.json
server/scripts/: overpass_generator.py
shared/: build.gradle.kts
shared/src/commonMain/kotlin/org/fediquest/shared/: Models.kt
web/: README.md  README_WEB.md  build.gradle.kts  index.html  package.json
web/js/: spawn-loader.js
web/models/: README.md
web/src/main/: index.html
web/src/main/js/: ar-manager.js  quest-fetcher.js
web/src/main/models/: README.md
